--- a/package.json
+++ b/package.json
@@ -61,8 +61,12 @@
     "release-it": "^15.0.0",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.21",
+    "solmate": "^6.1.0",
     "ts-node": "^10.1.0",
     "typechain": "^5.1.2",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@looksrare/contracts-libs": "^3.1.0"
   }
 }
