build: Missing release-it package

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
     "prepare": "husky install",
     "prepublishOnly": "yarn compile",
+    "release": "hardhat export-abi && release-it",
     "test": "hardhat test",
     "test:gas": "REPORT_GAS=true hardhat test",
     "test:forge": "forge test",
@@ -63,7 +64,7 @@
     "merkletreejs": "^0.2.31",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
-    "release-it": "^15.0.0",
+    "release-it": "^15.11.0",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.21",
     "solmate": "^6.1.0",
