build: Make EVM version paris

--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,7 @@ block_number = 0
 block_timestamp = 0
 cache = true
 cache_path = 'cache'
-evm_version = 'london'
+evm_version = 'paris'
 extra_output = []
 extra_output_files = []
 ffi = false
